# intentguard

./: .gitignore  Anchor.toml  Cargo.toml  GRANT-APPLICATION.md  IMMUNEFI-SUBMISSION.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THREAT-MODEL.md  TWITTER-THREAD.md  Trident.toml  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  pages.yml
app/: App.tsx  app.json  package.json
cli/: intent_guard.json  package.json  tsconfig.json
cli/src/: helpers.ts  index.ts  ledger.ts
examples/: cpi-integration.rs  full-flow.ts  jupiter-swap.ts  marinade-stake.ts  protected-swap.ts  protected-transfer.ts  raydium-lp.ts  tensor-nft.ts
extension/: manifest.json  popup.html
extension/src/: background.js  content.css  content.js  injected.js  pairing.js  popup.js
landing/: account.html  app-registry.json  billing-success.html  dashboard.html  index.html  pricing.html  revenue.html  test-qr.html
landing/api-docs/: hierarchy.html  index.html
landing/docs/: admin.html  api.html  architecture.html  cpi.html  examples.html  extension.html  fees.html  index.html  (+5 more)
programs/intent-guard/: Cargo.toml
programs/intent-guard/src/: errors.rs  lib.rs  state.rs
programs/intent-guard/src/instructions/: admin.rs  commit_intent.rs  initialize.rs  mod.rs  revoke_intent.rs  verify_intent.rs
scripts/: api-server.js  api-server.ts  devnet-demo.ts  e2e-mobile-test.ts  fee-admin.ts  monitor.ts  relay-server.js  setup-helius-webhook.ts  setup-multisig.ts  squads-admin.ts  stripe-billing.ts  webhook-server.ts
tests/: intent-guard.ts
trident-tests/: Trident.toml
(+63 files in other folders)
